jwt authentication functionality added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
     #database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        #use_sql_comments: true
+        #generate_statistics: true
   mail:
     username:
     password:
@@ -60,3 +65,4 @@ logging:
   level:
     '[org.hibernate.sql]': debug
     '[org.hibernate.type.descriptor.sql]': debug
+    '[org.hibernate.orm.jdbc.bind]': trace
